--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -115,6 +115,8 @@
 		padding-right: 70px
 	.section-title__hightlight
 		padding: 70px 90px 30px 72px
+	.col-3.clients-grid
+		grid-template-columns: 1fr 1fr
 
 
 /* Extra Small Devices, Phones */
@@ -155,7 +157,7 @@
 	.main__service-slider
 		margin-top: 175px
 	.main__index-page__footer
-		padding-top: 720px
+		padding-top: 50px
 		padding-bottom: 150px
 		> div > .col-2
 			grid-template-columns: 1fr
@@ -200,6 +202,8 @@
 		background: white
 	.f__c-section_first-slider .owl-stage-outer
 		margin-bottom: 30px
+	.col-3.clients-grid
+		grid-template-columns: 1fr
 
 @media only screen and (max-width : 400px)
 	.big__slider-title
@@ -254,7 +258,7 @@
 	.footer__custom-section_first .owl-nav
 		padding-top: 30px
 	.main__index-page__footer
-		padding: 780px 0 160px
+		padding: 50px 0 160px
 	.footer__logotype img
 		height: 35px
 	.footer__phone
