--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,2 +1,5 @@
 $default-font: 'Lato', sans-serif
 $accent: #005B96
+$transition: all 750ms cubic-bezier(0.19, 1, 0.22, 1)
+$gradient: linear-gradient(90deg, #71CAF3 0%, #BBCF33 100%)
+$light-gradient: linear-gradient(290.53deg, #9CE0FF 3.66%, #D7ED76 92.19%)
