--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -41,6 +41,7 @@ html, body
 body
 	position: relative
 	min-width: 320px
+	width: 100vw
 	font-family: $default-font
 	overflow-x: hidden
 	background: #005B96
@@ -95,6 +96,8 @@ a
 		text-transform: uppercase
 		padding: 5px 0 5px
 		line-height: 0
+		&:hover
+			color: #BBCF33
 
 .dropdown-default__value
 	background: rgba(255, 255, 255, 0.2)
@@ -102,6 +105,8 @@ a
 	cursor: pointer
 	span
 		margin-right: 3px
+	&:hover
+		color: #BBCF33
 
 .top-h_link
 	margin-left: 18px
@@ -169,8 +174,11 @@ a
 		z-index: -1
 
 
-a.stadrt__button.green:before
+.stadrt__button.green:before
 	background: #BBCF33
+
+.stadrt__button.green:hover:before
+	background: $gradient
 
 
 .stadrt__button.green
@@ -235,7 +243,7 @@ a.stadrt__button.green:before
 
 .nav-menu__content
 	position: relative
-	padding: 19px 0
+	// padding: 19px 0
 	&:after
 		content: ''
 		position: absolute
@@ -246,6 +254,9 @@ a.stadrt__button.green:before
 		transform: skew(170deg)
 		background: white
 		z-index: -1
+	.logotype
+		padding: 19px 0
+
 
 .g-content
 	width: 1024px
@@ -253,30 +264,44 @@ a.stadrt__button.green:before
 
 .menu__list
 	text-align: right
+	padding-top: 15px
 	a
 		position: relative
 		display: inline-block
 		color: #005B96
-		margin-left: 32px
-		font-size: 13px
+		font-size: 14px
 		font-weight: bold
-		padding: 17px 0
+		padding: 21px 14px 35px
+		z-index: 0
+		&:hover
+			color: white
+			&:after
+				content: ''
+				display: block
+				position: absolute
+				background: #005B96
+				height: 100%
+				width: 100%
+				bottom: 0
+				left: 0
+				transform: skew(170deg)
+				z-index: -1
+			&:before
+				content: ''
+				display: block
+				position: absolute
+				background: #66CCFF
+				height: 3px
+				width: 100%
+				bottom: 0
+				left: -6px
+				transform: skew(180deg)
+				z-index: 1
 
 .logotype
 	line-height: 0
 	img
 		height: 50px
-
-.menu__list a
-	&:hover:before
-		content: ''
-		display: block
-		position: absolute
-		background: #005B96
-		height: 2px
-		width: 100%
-		bottom: 7px
-		transform: skew(150deg)
 
 .big__slider
 	position: relative
@@ -455,6 +480,7 @@ p
 .custom_button-nav
 	display: inline-block
 	margin: 0 1px
+	cursor: pointer
 	span
 		position: relative
 		font-size: 0
@@ -488,6 +514,9 @@ p
 			top: 50%
 			left: 50%
 			transform: translate(-50%, -50%)
+		&:hover
+			&:after
+				background: $gradient
 
 .parallelogram-item__content .owl-nav
 	position: absolute
@@ -578,7 +607,7 @@ p
 		position: absolute
 		width: 100%
 		height: 100%
-		background: linear-gradient(290.53deg, #9CE0FF 3.66%, #D7ED76 92.19%)
+		background: $light-gradient
 		top: 0
 		left: -10px
 		transform: skewX(-10deg)
@@ -724,8 +753,11 @@ p
 	right: 0
 	margin-top: -82px
 
-.main__index-page__footer
+.inner__index-page__footer
 	 padding-top: 120px
+
+.main__index-page__footer
+	padding-top: 330px
 
 .main__footer
 	background-color: #003353
@@ -738,7 +770,6 @@ p
 	font-weight: 300
 	font-size: 25px
 	line-height: 14px
-	color: white
 	margin-left: 35px
 	.hightlight
 		font-weight: 900
@@ -746,6 +777,9 @@ p
 		line-height: 14px
 	img
 		margin-left: 10px
+	a
+		color: white
+
 
 .footer__head
 	margin-bottom: 30px
@@ -787,7 +821,7 @@ p
 
 .footer__foo
 	margin-top: 25px
-	a
+	.footer__link
 		font-weight: 900
 		font-size: 14px
 		line-height: 14px
@@ -871,7 +905,7 @@ p
 	top: 0
 	right: 0
 	cursor: pointer
-	transition: all 750ms cubic-bezier(0.19, 1, 0.22, 1)
+	transition: $transition
 
 .nav-menu_mobile-logotype a
 	display: block
@@ -1089,9 +1123,6 @@ p
 	background: url('img/icons/phone_blue.svg')
 	margin-left: 10px
 
-.white__content
-	background: white
-
 .contact_city-data
 	padding: 40px 0
 	color: #005B96
@@ -1187,5 +1218,169 @@ p
 
 .default_input option
 	color: black
+
+.inner-page_banner-item
+	position: relative
+	min-height: 500px
+
+.inner_banner-desc
+	position: absolute
+	top: 60%
+	transform: translate(0, -60%)
+	color: white
+
+.inner-page_banner-content h1
+	font-size: 50px
+
+.arrow-down_link
+	display: inline-block
+	width: 18px
+	height: 33px
+	background: url('/img/icons/arrow_down-white.svg') 50% no-repeat
+	position: absolute
+	bottom: 30px
+	transition: $transition
+
+.inner-page_banner-content .arrow-down_link:hover
+	bottom: 40px
+
+.inner-page h1
+	font-size: 42px
+	font-weight: 800
+	color: #005B96
+	line-height: 44px
+	margin: 0 0 30px
+
+.inner-page h5
+	font-weight: 300
+	font-size: 18px
+	line-height: 24px
+	margin: 20px 0
+
+.inner-content p
+	font-size: 16px
+	font-weight: 300
+	line-height: 22px
+	padding: 10px 0
+
+.inner-page h4
+	font-size: 18px
+	margin: 20px 0 5px
+	text-transform: uppercase
+	color: #71CAF3
+	letter-spacing: .07em
+
+.inner-content .white__content
+	padding-bottom: 150px
+
+.white__content
+	position: relative
+
+.white__content .inner-page
+	padding: 50px 0 0
+
+.blockquote-right
+	width: 50%
+	float: right
+	right: -60px
+	top: -50px
+
+[class*='blockquote-']
+	position: relative
+	color: #005B96
+	font-size: 24px
+	font-weight: 300
+	padding: 30px 50px
+	&::after
+		content: ''
+		display: block
+		position: absolute
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+		background: #E4F2FC
+		transform: skew(175deg)
+
+blockquote
+	position: relative
+	z-index: 1
+	&:after
+		content: '»'
+		display: block
+		font-size: 70px
+		line-height: 50%
+		position: absolute
+		bottom: -20px
+		right: -50px
+	&:before
+		content: '«'
+		display: block
+		font-size: 70px
+		line-height: 50%
+		position: absolute
+		top: -20px
+		left: -50px
+
+.inner-content .white__content:after
+	content: ''
+	background-image: url(/img/backgrounds/white_lines-backbround.svg)
+	background-size: cover
+	background-repeat: no-repeat
+	background-position: center
+	width: 100%
+	height: 100%
+	display: block
+	position: absolute
+	top: 0
+	opacity: 0.25
+
+.show_submenu
+	background: rgba(255, 255, 255, 0.9)
+
+.submenu-item
+	display: none
+	padding: 40px 0
+	a
+		display: block
+		color: #015B96
+		font-weight: bold
+
+.submenu-item a
+	padding: 10px 0
+	font-size: 18px
+	&:hover
+		color: #71CAF3
+		text-decoration: underline
+
+
+.mobile-submenu
+	display: none
+	a
+		font-size: 16px
+		padding: 15px 0
+
+.custom_tooltip-item
+	display: none
+
+.custom_tooltip-item
+	position: absolute
+	bottom: 40px
+	background: #E4F2FC
+	padding: 20px
+	border-radius: 5px
+	color: #003355
+	h5
+		margin: 0 0 10px
+		font-size: 16px
+	span
+		display: block
+		font-size: 14px
+		margin-bottom: 5px
+	a
+		color: #003353
+
+.custom_tooltip-container
+	cursor: pointer
 
 @import "media" // Всегда в конце
