--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -41,7 +41,6 @@ html, body
 body
 	position: relative
 	min-width: 320px
-	width: 100vw
 	font-family: $default-font
 	overflow-x: hidden
 	background: #005B96
@@ -82,6 +81,7 @@ body
 	background-size: cover
 	background-position: right
 	z-index: 1
+	overflow-x: hidden
 
 a
 	text-decoration: none
@@ -752,6 +752,7 @@ p
 	left: 0
 	right: 0
 	margin-top: -82px
+	overflow-x: hidden
 
 .inner__index-page__footer
 	 padding-top: 120px
