--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1384,4 +1384,12 @@ blockquote
 .custom_tooltip-container
 	cursor: pointer
 
+.footer__block-logo_item img
+	height: 80px
+	opacity: 0.3
+	cursor: pointer
+	transition: $transition
+	&:hover
+		opacity: 1
+
 @import "media" // Всегда в конце
