--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -3,3 +3,4 @@
 @import "../libs/owl/assets/owl.theme.default.min.css"
 @import "../libs/slick/slick.css"
 @import "../fonts/Lato/stylesheet.css"
+@import "../libs/Magnific-Popup-master/dist/magnific-popup.css"
