--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -145,6 +145,10 @@
 	.footer__foo .col-2
 		grid-template-columns: auto auto
 
+@media only screen and (max-width : 600px)
+	.main__service-slider-item
+		margin: 0 -60px
+		padding: 30px 130px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
