--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -242,6 +242,11 @@
 		font-size: 20px
 		.hightlight
 			font-size: 26px
+	[class*=blockquote-]
+		font-size: 18px
+		padding: 20px 30px
+		blockquote
+			margin: 20px 35px
 
 @media only screen and (max-width : 400px)
 	.big__slider-title
