--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -11,6 +11,7 @@
 @media only screen and (max-width : 970px)
 	.g-content
 		width: 100%
+		margin: 0 15px
 	.nav-menu__content:after
 		transform: none
 	.main__service-slider-item
@@ -45,6 +46,9 @@
 		padding: 0 72px
 	.col-2_top>*
 		width: 100%
+		position: relative !important
+	.parallelogram__item.second
+		top: 90px
 	.parallelogram__item.first .parallelogram-item__content:after
 		background: url(/img/backgrounds/rectangle_1-mobile.svg) no-repeat
 		width: 100%
@@ -52,6 +56,7 @@
 		padding-left: 72px
 	.footer__custom-section_first-container
 		grid-template-columns: 1fr
+		margin: 0 -15px
 	.owl-stage-outer
 		width: 90vw
 	.f__c-section_f-slider__item
@@ -177,7 +182,7 @@
 	.parallelogram__item.first .parallelogram-item__content:after
 		background: white
 	.f__c-section_f-slider__item, .parallelogram-item__content
-		padding-left: 35px
+		padding-left: 25px
 	.parallelogram__item.first h4
 		margin-left: 35px
 	.parallelogram__content
